[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/actors/Bomb.gd" type="Script" id=1]
[ext_resource path="res://assets/levels-04.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 568.428, 213.444 )

[sub_resource type="CircleShape2D" id=2]
radius = 0.01

[node name="Bomb" type="KinematicBody2D"]
scale = Vector2( 0.1, 0.1 )
collision_layer = 2
collision_mask = 8
script = ExtResource( 1 )

[node name="Image" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Image"]
rotation = 0.965167
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.5636 )
shape = SubResource( 1 )

[node name="Circle" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.5636 )
shape = SubResource( 2 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
